salesforce/generated/phase3_default_validation/objects/procurement_orders__dll/fields/direct_pay_flag__c.field-meta.xml
<CustomField>
    <fullName>direct_pay_flag__c</fullName>
    <label>direct_pay_flag</label>
    <defaultValue>false</defaultValue>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>direct_pay_flag</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>