salesforce/generated/phase3_default_validation/objects/procurement_orders__dll/fields/distributor_id__c.field-meta.xml
<CustomField>
    <fullName>distributor_id__c</fullName>
    <label>distributor_id</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>distributor_id</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>