salesforce/generated/phase3_default_validation/objects/procurement_orders__dll/fields/procurement_savings__c.field-meta.xml
<CustomField>
    <fullName>procurement_savings__c</fullName>
    <label>procurement_savings</label>
    <precision>18</precision>
    <scale>6</scale>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>procurement_savings</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Number</type>
</CustomField>