salesforce/generated/phase3_default_validation/objects/procurement_orders__dll/fields/total_cost_sunrun_rate__c.field-meta.xml
<CustomField>
    <fullName>total_cost_sunrun_rate__c</fullName>
    <label>total_cost_sunrun_rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>total_cost_sunrun_rate</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Number</type>
</CustomField>